# Calcule_Numerique

./: Chaine.cpp  Chaine.h  Fichier.cpp  a.out  main.cpp  resolution.cpp  resolution.h  solution.txt  test.gnu
avecQt/: CMakeLists.txt  Chaine.cpp  Chaine.h  Fichier.cpp  Fichier.h  Resolution.cpp  Resolution.h  Resolution.ui  main.cpp
